[tool.poetry]
name = "wjzivapi"
version = "0.1.0"
description = "An API by WJZIV"
authors = ["Walter Zielenski <walterzielenski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
